--- a/src/main/resources/templates/daybooks.html
+++ b/src/main/resources/templates/daybooks.html
@@ -4,7 +4,7 @@
 <head th:replace ="fragments :: head"></head>
 <body>
 <div class="container text-center">
-<div th:replace ="fragments :: navbar1"></div>
+<div th:replace ="fragments :: navbar"></div>
     <div>
         <form th:action="@{/logout}" method="post">
             <p>
