--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace ="fragments::head" />
+<head th:replace = "fragments :: head" />
 <body>
-	<div th:replace ="fragments::nav" />
 
+  	<div th:replace = "fragments::navbar"> </div>  
 	<div class="container text-center">
 	<h1>Welcome to CrDr</h1>
 	<h3><a th:href="@{/users}">List of Users</a></h3>
@@ -12,5 +12,6 @@
     <h3><a th:href="@{/login}">Login</a></h3>
 	<h3><a th:href="@{/daybooks}">Daybook</a></h3>
 	</div>
+	<div th:replace ="fragments::footer"></div>
 </body>
 </html>
