fixed daybook view date wise

--- a/src/main/resources/templates/findDaybook.html
+++ b/src/main/resources/templates/findDaybook.html
@@ -2,24 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head th:replace = "fragments :: head" />
-<head>
-    <link href="jquery-ui.min.css" rel="stylesheet">
-    <link href="jquery.comiseo.daterangepicker.css" rel="stylesheet">
-    <script src="jquery.min.js"></script>
-    <script src="jquery-ui.min.js"></script>
-    <script src="moment.min.js"></script>
-    <script src="jquery.comiseo.daterangepicker.js"></script>
-    <script>
-        $(function() { $("#e1").daterangepicker(); });
-    </script>
-</head>
-
 <body>
 
   	<div th:replace = "fragments::navbar"> </div>  
 	<!-- jQuery UI DateRangePicker -->	
-	<input id="e1" name="e1">
-
-	<div th:replace ="fragments::footer"></div>
+	<div class="container">
+		<form th:action="@{/daybooks}" th:object="${formdata}" method="post" style="max-width: 600px; margin: 0 auto;">
+			From Date: <input type="date" th:filed="*{startDate}" name="startDate" min="2000-01-01" max="2022-01-01" value="2020-04-02" >
+		<!--  	To Date: <input type="date" th:filed="*{date2}" name="enddate" min="2000-01-01" max="2022-01-01"> -->
+			<button type="submit">Submit </button>
+			<input type="button" value="Close">
+		</form>	
+	
+	</div>
 </body>
 </html>
