--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -45,12 +45,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <body>
 		<div th:fragment="navbar" >
 	<div class="navbar">
-  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
-  <a th:href="@{/daybooks}"><i class="fa fa-fw fa-search"></i> Daybook</a> 
-  <a th:href="@{/login}"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
+  <a class="active" href=""><i class="fa fa-fw fa-home"></i> Home</a> 
+  <a th:href="@{/findDaybook}"><i class="fa fa-fw fa-search"></i> Daybook</a> 
+  <a th:href="@{/users}"><i class="fa fa-fw fa-envelope"></i> Users</a> 
   <a th:href="@{/login}"><i class="fa fa-fw fa-user"></i> Login</a>
 		</div>
 </div>
-	
+
 </body>
 </html>
