--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,7 @@
 	<h3><a th:href="@{/users}">List of Users</a></h3>
     <h3><a th:href="@{/register}">Register</a></h3>
     <h3><a th:href="@{/login}">Login</a></h3>
-	<h3><a th:href="@{/daybooks}">Daybook</a></h3>
+	<h3><a th:href="@{/findDaybook}">Daybook</a></h3>
 	</div>
-	<div th:replace ="fragments::footer"></div>
 </body>
 </html>
