--- a/src/main/resources/templates/findDaybook.html
+++ b/src/main/resources/templates/findDaybook.html
@@ -9,7 +9,7 @@
 	<div class="container">
 		<form th:action="@{/daybooks}" th:object="${formdata}" method="post" style="max-width: 600px; margin: 0 auto;">
 			From Date: <input type="date" th:filed="*{startDate}" name="startDate" min="2000-01-01" max="2022-01-01" value="2020-04-02" >
-		<!--  	To Date: <input type="date" th:filed="*{date2}" name="enddate" min="2000-01-01" max="2022-01-01"> -->
+		 	To Date: <input type="date" th:filed="*{endDate}" name="endDate" min="2000-01-02" max="2022-01-01" value ="2020-04-08">
 			<button type="submit">Submit </button>
 			<input type="button" value="Close">
 		</form>	
