--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
 		xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head>
-    <meta charset="ISO-8859-1">
-    <title>List Users</title>
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
-    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-</head>
+<head th:replace ="fragments :: head"></head>
 <body>
 <div class="container text-center">
+	<div th:replace ="fragments :: navbar"></div>
+
     <div>
         <form th:action="@{/logout}" method="post">
             <p>
