--- a/src/main/resources/templates/daybooks.html
+++ b/src/main/resources/templates/daybooks.html
@@ -3,8 +3,8 @@
 		xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head th:replace ="fragments :: head"></head>
 <body>
-<div class="container text-center">
 <div th:replace ="fragments :: navbar"></div>
+<div class="container text-center">
     <div>
         <form th:action="@{/logout}" method="post">
             <p>
@@ -29,15 +29,15 @@
             </thead>
             <tbody>
                	<th:block th:each="list: ${listOflist}">
-               		<tr th:with="daybal=${@DaybookBalance.findBalance(${list})">
+               		<tr th:with="daybal=${DaybookBalance.findBalance(list)}">
                		 <td>Date</td>
                		 <td>Opening Balance</td>
                		 <td></td>
-               		 <td style="color:darkgreen" th:text="${daybal.closBl}">Opening Balance Value</td>
+               		 <td style="color:darkgreen" th:text="${daybal.closeBl}">Opening Balance Value</td>
                		</tr>
-                	<tr>
-               		 <td style="color:red">Date</td>
-               		 <td style="color:red">Day of week</td>
+                	<tr th:with="daybal=${DaybookBalance.findBalance(list)}">
+               		 <td style="color:red" th:text="${daybal.date}">Date</td>
+               		 <td style="color:red" th:text="${daybal.dayOfWeek}">Day of week</td>
                		 <td></td>
                		 <td></td>
                		</tr>
@@ -47,7 +47,7 @@
                      <td th:text="${daybook.crAmt}">Credit</td>
                      <td th:text="${daybook.drAmt}">Debit</td>
                 	</tr>
-                	<tr th:with="daybal=${@DaybookBalance.findBalance(${list})">
+                	<tr th:with="daybal=${DaybookBalance.findBalance(list)}">
                		 <td></td>
                		 <td></td>
                		 <td style="color:red" th:text="${daybal.crTot}">Credit Total</td>
