--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace = "fragments :: head" />
+<head th:replace = "indexfrag :: headfra" />
 <body>
 
   	<div th:replace = "fragments::navbar"> </div>  
 	<div class="container text-center">
 	<h1>Welcome to CrDr</h1>
-	<h3><a th:href="@{/users}">List of Users</a></h3>
-    <h3><a th:href="@{/register}">Register</a></h3>
-    <h3><a th:href="@{/login}">Login</a></h3>
-	<h3><a th:href="@{/findDaybook}">Daybook</a></h3>
+	</div>
+	<div class="flex-container">
+  <div><a th:href="@{/findDaybook}">Daybook</a></div>
+  <div>Ledger</div>
+  <div>Trial Balance</div>
+  <div>Trading-Profit & Loss</div>
+  <div>Balance Sheet</div>
 	</div>
 </body>
 </html>
