--- a/src/main/resources/templates/findLedger.html
+++ b/src/main/resources/templates/findLedger.html
@@ -7,13 +7,38 @@
   	<div th:replace = "fragments::navbar"> </div>  
 	<!-- jQuery UI DateRangePicker -->	
 	<div class="container">
+		<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-7 col-sm-6 col-lg-8">
+	<div>
+	<fieldset>
+		<legend>Select Account</legend>
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th>No</th>
+                    <th>Account Name</th>
+                </tr>
+            </thead>
+            <tbody>
+                    <tr th:each="daybook: ${list}">
+                     <td th:text="${daybook.date}">Date</td>
+                     <td th:text="${daybook.narration}">Narration</td>
+                	</tr>
+            </tbody>
+        </table>
+        </fieldset>
+	</div>	
+		</div>
+		<div class="col-xs-5 col-sm-6 col-lg-4">
 		<form th:action="@{/ledger}" th:object="${formdata}" method="post" style="max-width: 600px; margin: 0 auto;">
-		<fieldset>	
+		<fieldset >
+				<legend>Select Specifications</legend>	
 				<div class="form-group">
     			<label for="exampleFormControlSelect1">Report Order</label>
 	          <select class="form-control" th:field="*{reportOrder}" id="exampleFormControlSelect1">
-    		  <option>Select</option>
-      		  <option>All</option>
+      		  <option value="true">All</option>
+    		  <option value="false">Select</option>
     		  </select>
 			  </div>
 			From Date: <input type="date" th:filed="*{startDate}" name="startDate" min="2000-01-01" max="2022-01-01" value="2020-04-02" >
@@ -21,24 +46,23 @@
 			<div class="form-group">
     			<label for="exampleFormControlSelect2">Transacted Accounts Only</label>
 	          <select class="form-control" th:field="*{transactedAccOnly}" id="exampleFormControlSelect2">
-    		  <option>No</option>
-      		  <option>Yes</option>
+    		  <option value="false">No</option>
+      		  <option value="true">Yes</option>
     		  </select>
 			  </div>
 			<div class="form-group">
     			<label for="exampleFormControlSelect3">Monthly Cut-Off</label>
 	          <select class="form-control" th:field="*{cutOff}" id="exampleFormControlSelect3">
-    		  <option>Don't Include</option>
-      		  <option>Include</option>
+    		  <option value="false">Don't Include</option>
+      		  <option value="true">Include</option>
     		  </select>
 			  </div>  
-			Stock Entries Needed: 	<input type="radio" th:field="*{isStockNeeded}">
-			
 			<button type="submit">Submit </button>
 			<input type="button" value="Close">
 		</fieldset>
 		</form>	
-	
-	</div>
+		</div>
+		</div></div>
+		</div>
 </body>
 </html>
