--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,9 @@
 	<div class="flex-container">
   <div><a th:href="@{/findDaybook}">Daybook</a></div>
   <div><a th:href="@{/findLedger}">Ledger</a></div>
-  <div>Trial Balance</div>
-  <div>Trading-Profit & Loss</div>
-  <div>Balance Sheet</div>
+  <div><a th:href="@{/findTrialBal}">Trial Balance</a></div>
+  <div><a th:href="@{/findTradingPL}">Trading - Profit and Loss</a></div>
+  <div><a th:href="@{/findBalSheet}">Balance Sheet</a></div>
 	</div>
 </body>
 </html>
