--- a/src/main/resources/templates/daybooks.html
+++ b/src/main/resources/templates/daybooks.html
@@ -18,6 +18,7 @@
     </div>
      
     <div>
+    	<div class=scrol_daybook>
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
                 <tr>
@@ -55,6 +56,7 @@
                		</tr>
                 </th:block>
             </tbody>
+            </div>
         </table>
     </div>
 </div>
