--- a/src/main/resources/templates/ledger.html
+++ b/src/main/resources/templates/ledger.html
@@ -18,6 +18,7 @@
     </div>
      
     <div>
+    	<div class=scrol_daybook>
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
                 <tr>
@@ -28,9 +29,8 @@
                 </tr>
             </thead>
             <tbody>
-               	<th:block th:each="list: ${ledgerList}">
-               		<th:blok th:each="acchead: ${headlist}">
-               		<tr>
+               	<th:block th:each="acchead: ${headlist}">
+               		<tr th:each="list: ${ledgerList}">
                		 <td></td>
                		 <td th:text ="${acchead.accName}">Acc Head Name</td>
                		 <td></td>
@@ -60,10 +60,10 @@
                		 <td style="color:red" th:text="${daybal.crTot}">Credit Total</td>
                		 <td style="color:red" th:text="${daybal.drTot}">Debit Total</td>
                		</tr>
-               		</th:blok>
                 </th:block>
             </tbody>
         </table>
+        </div>
     </div>
 </div>
 </body>
