--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,6 +11,14 @@
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 
+#left_align{
+	text-align: left;
+}
+
+#right_align{
+	text-align: right;
+}
+
 .navbar {
   width: 100%;
   background-color: #555;
