--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -19,6 +19,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	text-align: right;
 }
 
+#center_align{
+	text-align: center;
+}
+
 .navbar {
   width: 100%;
   background-color: #555;
